Верстка шапки и подвала сайта

--- a/Project/main/style/utils/_fonts.scss
+++ b/Project/main/style/utils/_fonts.scss
@@ -1,1 +1,1 @@
-@include font("pt-root-ui-bold", "pt-root-ui-bold", "400", "normal");
+@include font("RedHatDisplay-Bold", "RedHatDisplay-Bold", "400", "normal");@include font("RedHatDisplay-BoldItalic", "RedHatDisplay-BoldItalic", "400", "normal");@include font("RedHatDisplay-Light", "RedHatDisplay-Light", "400", "normal");
