--- a/Project/main/style/utils/_variables.scss
+++ b/Project/main/style/utils/_variables.scss
@@ -28,3 +28,9 @@ $breakpoint-all-prefixes: ("xs", "lg");
 $breakpoint-up-prefixes: ("xs", "lg");
 
 
+// font-family
+$Regular: "RedHatDisplay-Regular", sans-serif;
+$Light: "RedHatDisplay-Light", sans-serif;
+$Medium: "RedHatDisplay-Medium", sans-serif;
+$Bold: "RedHatDisplay-Bold", sans-serif;
+$BoldItalic: "RedHatDisplay-BoldItalic", sans-serif;
