--- a/Project/main/style/utils/reset.scss
+++ b/Project/main/style/utils/reset.scss
@@ -73,6 +73,10 @@ button {
     background-color: transparent;
 }
 
+address {
+    font-style: normal;
+}
+
 /* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
 @media (prefers-reduced-motion: reduce) {
     * {
