--- a/Project/main/template/component/header.html
+++ b/Project/main/template/component/header.html
@@ -1,3 +1,36 @@
 <header class="header">
-    <nav class="header__nav">nav</nav>
+    <div class="container">
+        <nav class="header__nav">
+            <a class="header__logo" href="/">Dudeshape</a>
+            <ul class="header__links">
+                <li><a class="link" href="#">Home</a></li>
+                <li><a class="link" href="#">Products</a></li>
+                <li><a class="link" href="#">About Us</a></li>
+                <li><a class="link" href="#">Contact Us</a></li>
+            </ul>
+            <ul class="header__icons">
+                <li>
+                    <a href="#">
+                        <svg class="icon">
+                            <use xlink:href="img/sprite.svg#profile"/>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="icon">
+                            <use xlink:href="img/sprite.svg#buy"/>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <svg class="icon">
+                            <use xlink:href="img/sprite.svg#nav"/>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
