--- a/Project/main/style/component/root.scss
+++ b/Project/main/style/component/root.scss
@@ -1,6 +1,26 @@
+@import "./text";
+@import "./title";
+@import "./list";
+
+@import "./header";
+@import "./footer";
+
+body {
+  font-family: $Regular;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .container {
   width: 100%;
   max-width: 1280px;
   padding: 0 20px;
   margin: auto;
+}
+
+.link {
+  font-family: $Regular;
+  text-decoration: none;
+  color: #222222;
 }
