--- a/Project/main/template/component/footer.html
+++ b/Project/main/template/component/footer.html
@@ -1,5 +1,54 @@
-<footer>
-  footer
+<footer class="footer">
+  <div class="container">
+    <div class="row around-lg">
+      <div class="col-3 col-xs-12 mb-xs-30">
+        <div class="mb-40 mb-xs-20">
+          <a class="footer__logo" href="#">Dudeshape</a>
+        </div>
+        <p class="text-l">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+      </div>
+      <div class="col-3 col-xs-12 mb-xs-30">
+        <h5 class="h5 mt-20 mb-40 mv-xs-20">Quick Link</h5>
+        <nav class="footer__nav">
+          <ul>
+            <li><a class="link" href="#">Home</a></li>
+            <li><a class="link" href="#">Products</a></li>
+            <li><a class="link" href="#">About Us</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-3 col-xs-12">
+        <h5 class="h5 mt-20 mb-40 mb-xs-20">Contact Us</h5>
+        <address>
+          <p class="mb-20 mb-xs-20"><a class="link" href="mailto:oyasimnaeem@email.com">oyasimnaeem@email.com</a></p>
+          <p class="mb-20 mb-xs-20"><a class="link" href="tel:+123456789">+123456789</a></p>
+          <ul class="list-social">
+            <li>
+              <a href="#">
+                <svg class="icon">
+                  <use xlink:href="img/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="icon">
+                  <use xlink:href="img/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="icon">
+                  <use xlink:href="img/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
+    </div>
+  </div>
 </footer>
 
 <script src="js/main.min.js"></script>
