--- a/Project/main/template/component/footer.html
+++ b/Project/main/template/component/footer.html
@@ -1,6 +1,7 @@
 <footer class="footer">
   <div class="container">
-    <div class="row around-lg">
+    <hr>
+    <div class="row pt-50 pb-50 pt-xs-25 pb-xs-25 around-lg">
       <div class="col-3 col-xs-12 mb-xs-30">
         <div class="mb-40 mb-xs-20">
           <a class="footer__logo" href="#">Dudeshape</a>
