--- a/Project/main/style/component/text.scss
+++ b/Project/main/style/component/text.scss
@@ -10,8 +10,8 @@
 	}
 
 	&-xl {
-		font-size: 22px;
-		line-height: 30px;
+		font-size: 20px;
+		line-height: 32px;
 
 		@media (max-width: $xs-max) {
 			font-size: 18px;
@@ -69,6 +69,10 @@
 
 	&-right {
 		text-align: right;
+	}
+
+	&-gray {
+		color: #555555;
 	}
 
 	@media screen and (max-width: $xs-max) {
