Добавил блок логотипов

--- a/Project/main/template/component/headerBanner.html
+++ b/Project/main/template/component/headerBanner.html
@@ -1,7 +1,7 @@
-<section class="banner__header">
+<section class="banner__header mb-130 mb-xs-60">
     <div class="container">
         <article class="row">
-            <div class="col-6 col-xs-12 order-xs-2 align-center">
+            <div class="col-6 col-xs-12 order-xs-2 align-center pb-30 pb-xs-20">
                 <h1 class="h1 mt-40 mt-xs-20 mb-30 mb-xs-30">Get Your Best Cosmetic Products Here</h1>
                 <p class="text-xl text-gray mb-30 mb-xs-30">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
                 <form class="form-search mb-60 mb-xs-30" action="">
@@ -16,8 +16,7 @@
             </div>
             <div class="col-6 col-xs-12 order-xs-1 align-end">
                 <picture>
-                    <source srcset="/img/products.jpg">
-                    <img  src="img/products.jpg" alt="products">
+                    <img src="img/products.jpg" alt="products">
                 </picture>
             </div>
         </article>
