--- a/Project/main/style/utils/grid.scss
+++ b/Project/main/style/utils/grid.scss
@@ -34,9 +34,23 @@
   order: 1;
 }
 
-.d-flex {
+.flex {
     display: flex;
+
+  @media #{$breakpoint-lg-only} {
+    &-lg {
+      display: flex;
+    }
+  }
+
+  @media #{$breakpoint-xs-only} {
+    &-xs {
+      display: flex;
+    }
+  }
+
 }
+
 
 .align-start {
   align-self: flex-start;
@@ -61,6 +75,38 @@
 .flex-grow {
   flex-grow: 1;
 }
+.start {
+  justify-content: flex-start;
+}
+
+.center {
+  justify-content: center;
+}
+
+.end {
+  justify-content: flex-end;
+}
+
+.top {
+  align-items: flex-start;
+}
+
+.middle {
+  align-items: center;
+}
+
+.bottom {
+  align-items: flex-end;
+}
+
+.around {
+  justify-content: space-around;
+}
+
+.between {
+  justify-content: space-between;
+}
+
 
 @mixin col-factory-all($thisPrefix) {
   @for $i from 1 through $grid-columns {
@@ -78,38 +124,6 @@
     .col-offset-#{$i} {
       margin-left: calc(100% / $grid-columns-xs) * $i;
     }
-  }
-
-  .row.start {
-    justify-content: flex-start;
-  }
-
-  .row.center {
-    justify-content: center;
-  }
-
-  .row.end {
-    justify-content: flex-end;
-  }
-
-  .row.top {
-    align-items: flex-start;
-  }
-
-  .row.middle {
-    align-items: center;
-  }
-
-  .row.bottom {
-    align-items: flex-end;
-  }
-
-  .row.around {
-    justify-content: space-around;
-  }
-
-  .row.between {
-    justify-content: space-between;
   }
 }
 
