--- a/Project/main/style/component/root.scss
+++ b/Project/main/style/component/root.scss
@@ -7,6 +7,7 @@
 @import "./header";
 @import "./banner";
 @import "./footer";
+@import "./product";
 
 body {
   font-family: $Regular;
@@ -30,7 +31,28 @@ hr {
 }
 
 .link {
-  font-family: $Regular;
   text-decoration: none;
   color: #222222;
+
+  &_arrow {
+    position: relative;
+    padding-right: 32px;
+
+    &:after {
+      content: '';
+      display: block;
+      width: 24px;
+      height: 24px;
+      background-image: url('../img/sprite.svg#arrow-smile');
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      margin: auto;
+    }
+  }
+
+  &_underline {
+    text-decoration: underline;
+  }
 }
