--- a/Project/main/style/component/text.scss
+++ b/Project/main/style/component/text.scss
@@ -9,6 +9,16 @@
 		margin-top: 10px;
 	}
 
+	&-xxl {
+		font-size: 24px;
+		line-height: 30px;
+
+		@media (max-width: $xs-max) {
+			font-size: 18px;
+			line-height: 26px;
+		}
+	}
+
 	&-xl {
 		font-size: 20px;
 		line-height: 32px;
@@ -59,6 +69,11 @@
 		}
 	}
 
+
+	&-medium {
+		font-family: $Medium;
+	}
+
 	&-nowrap {
 		white-space: nowrap;
 	}
@@ -77,7 +92,7 @@
 
 	@media screen and (max-width: $xs-max) {
 		&-xs-left {
-			text-align: left !important;
+			text-align: left;
 		}
 
 		&-xs-center {
@@ -85,7 +100,7 @@
 		}
 
 		&-xs-right {
-			text-align: right !important;
+			text-align: right;
 		}
 	}
 }
