--- a/Project/main/style/utils/_variables.scss
+++ b/Project/main/style/utils/_variables.scss
@@ -34,3 +34,5 @@ $Light: "RedHatDisplay-Light", sans-serif;
 $Medium: "RedHatDisplay-Medium", sans-serif;
 $Bold: "RedHatDisplay-Bold", sans-serif;
 $BoldItalic: "RedHatDisplay-BoldItalic", sans-serif;
+
+$transition: color .25s ease-in-out, background-color .25s ease-in-out, border-color .25s ease-in-out, box-shadow .25s ease-in-out, transform .2s ease-in-out;
