--- a/Project/main/template/component/headerBanner.html
+++ b/Project/main/template/component/headerBanner.html
@@ -1,8 +1,8 @@
-<section class="banner__header mb-130 mb-xs-60">
+<section class="banner-header js-banner mb-130 mb-xs-60">
     <div class="container js-banner-slider">
         <div>
             <article class="row">
-                <div class="col-6 col-xs-12 order-xs-2 align-center pb-30 pb-xs-20">
+                <div class="col-6 col-xs-12 order-xs-2 align-center pb-30 pb-xs-60">
                     <h1 class="h1 mt-40 mt-xs-20 mb-30 mb-xs-30">Get Your Best Cosmetic Products Here</h1>
                     <p class="text-xl text-gray mb-30 mb-xs-30">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
                     <form class="form-search mb-60 mb-xs-30" action="">
@@ -24,7 +24,7 @@
         </div>
         <div>
             <article class="row">
-                <div class="col-6 col-xs-12 order-xs-2 align-center pb-30 pb-xs-20">
+                <div class="col-6 col-xs-12 order-xs-2 align-center pb-30 pb-xs-60">
                     <h1 class="h1 mt-40 mt-xs-20 mb-30 mb-xs-30">Best offer</h1>
                     <p class="text-xl text-gray mb-30 mb-xs-30">Find out now</p>
                     <a class="btn" href="#">Shop Naw</a>
@@ -36,5 +36,17 @@
                 </div>
             </article>
         </div>
+    </div>
+    <div class="banner-header__nav">
+        <button class="banner-header__btn js-btn-prev">
+            <svg class="icon">
+                <use xlink:href="img/sprite.svg#arrow"/>
+            </svg>
+        </button>
+        <button class="banner-header__btn revers js-btn-next">
+            <svg class="icon">
+                <use xlink:href="img/sprite.svg#arrow"/>
+            </svg>
+        </button>
     </div>
 </section>
