--- a/Project/main/style/component/form.scss
+++ b/Project/main/style/component/form.scss
@@ -6,6 +6,14 @@
     background-color: white;
     padding: 8px;
   }
+  &-subscribe {
+    max-width: 380px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    padding: 8px;
+  }
 }
 
 input  {
