Добавил прелоудер для изображений, изменил конфиг eslinter

--- a/Project/main/template/component/card.html
+++ b/Project/main/template/component/card.html
@@ -1,7 +1,7 @@
 <div class="product-card">
-    <div class="product-card__img">
+    <div class="product-card__img img-hidden">
         <picture class="mb-20 mb-xs-10">
-            <img src="img/product/pump-bottle.png" alt="pump-bottle">
+            <img width="608" height="490" data-src="img/product/pump-bottle.png" src="img/1x1.png" alt="pump-bottle">
         </picture>
     </div>
     <div class="product-card__content">
