--- a/Project/main/template/component/headerBanner.html
+++ b/Project/main/template/component/headerBanner.html
@@ -15,9 +15,9 @@
                     </form>
                     <a class="btn" href="#">Shop Naw</a>
                 </div>
-                <div class="col-6 col-xs-12 order-xs-1 align-end">
+                <div class="col-6 col-xs-12 order-xs-1 align-end img-hidden">
                     <picture>
-                        <img src="img/products.jpg" alt="products">
+                        <img width="609" height="533" data-src="img/products.jpg" src="img/1x1.png" alt="products">
                     </picture>
                 </div>
             </article>
@@ -29,9 +29,9 @@
                     <p class="text-xl text-gray mb-30 mb-xs-30">Find out now</p>
                     <a class="btn" href="#">Shop Naw</a>
                 </div>
-                <div class="col-6 col-xs-12 order-xs-1 align-end">
+                <div class="col-6 col-xs-12 order-xs-1 align-end img-hidden">
                     <picture>
-                        <img src="img/products.jpg" alt="products">
+                        <img width="609" height="533" data-src="img/products.jpg" src="img/1x1.png" alt="products">
                     </picture>
                 </div>
             </article>
