--- a/Project/main/template/component/logotips.html
+++ b/Project/main/template/component/logotips.html
@@ -4,32 +4,32 @@
     <div class="pt-40 pt-xs-40 pb-40 pb-xs-40 js-slider-logo">
       <div class="flex center">
         <picture>
-          <img width="90" src="img/logo/Airbnb.png" alt="airbnb">
+          <img width="90"  height="28" data-src="img/logo/Airbnb.png" src="img/1x1.png" alt="airbnb">
         </picture>
       </div>
       <div class="flex center">
         <picture>
-          <img width="85" src="img/logo/Hubspot.png" alt="Hubspot">
+          <img width="85"  height="27" data-src="img/logo/Hubspot.png" src="img/1x1.png" alt="Hubspot">
         </picture>
       </div>
       <div class="flex center">
         <picture>
-          <img width="85" src="img/logo/Google.png" alt="Google">
+          <img width="85"  height="28" data-src="img/logo/Google.png" src="img/1x1.png" alt="Google">
         </picture>
       </div>
       <div class="flex center">
         <picture>
-          <img width="123" src="img/logo/Microsoft.png" alt="Microsoft">
+          <img width="123"  height="28" data-src="img/logo/Microsoft.png" src="img/1x1.png" alt="Microsoft">
         </picture>
       </div>
       <div class="flex center">
         <picture>
-          <img width="112" src="img/logo/Walmart.png" alt="Walmart">
+          <img width="112" height="28" data-src="img/logo/Walmart.png" src="img/1x1.png" alt="Walmart">
         </picture>
       </div>
       <div class="flex center">
         <picture>
-          <img width="80" src="img/logo/FedEx.png" alt="FedEx">
+          <img width="80"  height="28" data-src="img/logo/FedEx.png" src="img/1x1.png" alt="FedEx">
         </picture>
       </div>
     </div>
