--- a/Project/main/style/component/root.scss
+++ b/Project/main/style/component/root.scss
@@ -62,6 +62,14 @@ hr {
   }
 }
 
+.img-hidden {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  background-image: url("../img/loader.gif");
+  background-position: center;
+  background-repeat: no-repeat;
+}
 .revers {
   transform: rotate(180deg);
 }
