Добавил Sorce для картинок обновил Redmi

--- a/Project/main/template/component/card.html
+++ b/Project/main/template/component/card.html
@@ -1,6 +1,7 @@
 <div class="product-card">
     <div class="product-card__img img-hidden">
         <picture class="mb-20 mb-xs-10">
+            <source width="375" height="302" data-srcset="img/product/pump-bottle.png" srcset src="img/1x1.png" media="(max-width: 716px)">
             <img width="608" height="490" data-src="img/product/pump-bottle.png" src="img/1x1.png" alt="pump-bottle">
         </picture>
     </div>
