--- a/Project/main/template/component/headerBanner.html
+++ b/Project/main/template/component/headerBanner.html
@@ -17,6 +17,7 @@
                 </div>
                 <div class="col-6 col-xs-12 order-xs-1 align-end img-hidden">
                     <picture>
+                        <source width="320" height="280" data-srcset="img/products.jpg" srcset src="img/1x1.png" media="(max-width: 716px)">
                         <img width="609" height="533" data-src="img/products.jpg" src="img/1x1.png" alt="products">
                     </picture>
                 </div>
@@ -31,6 +32,7 @@
                 </div>
                 <div class="col-6 col-xs-12 order-xs-1 align-end img-hidden">
                     <picture>
+                        <source width="320" height="280" data-srcset="img/products.jpg" srcset src="img/1x1.png" media="(max-width: 716px)">
                         <img width="609" height="533" data-src="img/products.jpg" src="img/1x1.png" alt="products">
                     </picture>
                 </div>
